deploy: 89d4d13021020a7d6374b5bf8e29c52af99aa8b8

--- a/overview.html
+++ b/overview.html
@@ -99,6 +99,10 @@
 <ul class="simple">
 <li><p>Virtual Machines can have many different IP Addresses associated to many interfaces. As there is no overall business logic that will satisfy which IP will be used as the Primary IP of a Virtual Machine in Nautobot, there is an option to decide by lowest or highest. The total number of IP’s are gathered, sorted and assigned to the VM based on the value of this setting. Anything other than <code class="docutils literal notranslate"><span class="pre">Lowest</span></code> will assign the highest IP value found on the Virtual Machine.</p></li>
 </ul>
+<p><code class="docutils literal notranslate"><span class="pre">DEFAULT_USE_CLUSTERS</span></code> and <code class="docutils literal notranslate"><span class="pre">DEFAULT_CLUSTER_NAME</span></code></p>
+<ul class="simple">
+<li><p>This experimental feature allows users of vSphere which contain no <code class="docutils literal notranslate"><span class="pre">Clusters</span></code> in their environment. The <code class="docutils literal notranslate"><span class="pre">DEFAULT_USE_CLUSTERS</span></code> needs to be set to <code class="docutils literal notranslate"><span class="pre">False</span></code> and a name of your choosing would be assigned to <code class="docutils literal notranslate"><span class="pre">DEFAULT_CLUSTER_NAME</span></code>. A <code class="docutils literal notranslate"><span class="pre">Cluster</span></code> is a requirement of a <code class="docutils literal notranslate"><span class="pre">Virtual</span> <span class="pre">Machine</span></code> in Nautobot.</p></li>
+</ul>
 </section>
 </section>
 
