--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; Nautobot SSOT vSphere 0.1.3 documentation</title>
+  <title>Index &mdash; Nautobot SSOT vSphere 0.1.4 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/graphviz.css" type="text/css" />
@@ -16,6 +16,7 @@
         <script src="_static/underscore.js"></script>
         <script src="_static/_sphinx_javascript_frameworks_compat.js"></script>
         <script src="_static/doctools.js"></script>
+        <script src="_static/sphinx_highlight.js"></script>
     <script src="_static/js/theme.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
@@ -429,6 +430,12 @@
 
       <ul>
         <li><a href="autoapi/nautobot_ssot_vsphere/diffsync/adapters/index.html#nautobot_ssot_vsphere.diffsync.adapters.NautobotDiffSync.get_initial_cluster">(nautobot_ssot_vsphere.diffsync.adapters.NautobotDiffSync method)</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/nautobot_ssot_vsphere/diffsync/adapters/adapter_nautobot/index.html#nautobot_ssot_vsphere.diffsync.adapters.adapter_nautobot.NautobotDiffSync.get_initial_vms">get_initial_vms() (nautobot_ssot_vsphere.diffsync.adapters.adapter_nautobot.NautobotDiffSync method)</a>
+
+      <ul>
+        <li><a href="autoapi/nautobot_ssot_vsphere/diffsync/adapters/index.html#nautobot_ssot_vsphere.diffsync.adapters.NautobotDiffSync.get_initial_vms">(nautobot_ssot_vsphere.diffsync.adapters.NautobotDiffSync method)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/nautobot_ssot_vsphere/utilities/vsphere_client/index.html#nautobot_ssot_vsphere.utilities.vsphere_client.VsphereClient.get_vm_details">get_vm_details() (nautobot_ssot_vsphere.utilities.vsphere_client.VsphereClient method)</a>
